1.3.5
- Re-release binary framework due to codesign issue

1.3.4
- Distribute optimized binary (xcframework) via SPM for apple platforms

1.3.3
- Adds OCB Authenticated-Encryption Algorithm (RFC7253)
- build-framework.sh output CryptoSwift.xcframework
- Xcode 12.2 maintenance updates
- Removed CryptoSwift.playground (couldn't make it work since Xcode 12 update)

1.3.2
- Swift 5.3 update (Xcode 12)
- Bump target platform (iOS 9, macOS 10.12)
- Allow CMAC with any Cipher
- Remove CMAC key limit

1.3.1
- Fix tests
- Swift 5.2 update
- Address possible timing issue

1.3.0
- Adds ISO-78164 padding
- Performance improvements
- Swift 5.1 update

1.2.0
- Performance improvements
- Workaround Xcode test builds with Xcode 11

1.1.3
- Fix build crash: https://bugs.swift.org/browse/SR-11630
- Fixes Xcode project tests build
- SwiftFormat all the things
- Increase/fix SHA2 data length for big input by use Int64 for calculation

1.1.2
- Fix Swift 5.0 build (for real this time)

1.1.1
- Fix Swift 5.0 build

1.1.0
- Replace RandomBytesSequence with Swift.RandomNumberGenerator
- Fix CBC-MAC
- Update SPM support
- Update for Xcode 11 and Swift 5.1
- Xcode: BUILD_LIBRARY_FOR_DISTRIBUTION = YES

1.0.0
- Swift 5
- Let's
- Celebrate
- This
- Event
- With
- 1.0.0 release
- After
- 4 years
- Thank you

0.15.0
- Adds The scrypt Password-Based Key Derivation Function (https://tools.ietf.org/html/rfc7914)
- Minor improvements

0.14.0
- Fixed decryption of AES-GCM ciphertexts with custom tag length

0.13.1
- Adds AES-GCM tag length configuration.
- Fixes count check for initializing UInt64 from Data.

0.13.0
- Adds CBC-MAC authenticator.
- Adds AES-CCM operation mode.

0.12.0
- Swift 4.2 maintenance update.

0.11.0
- API: Cryptor.seek() is throwable
- Adds proper stream support for CTR encryption with Updaptable interface.
- Refactor internals for the stream cipher modes.
- Set minimum deployment target to 8.0 (again).

0.10.0