@@ -1,3 +1,5 @@
+- Windows support
+
 1.3.5
 - Re-release binary framework due to codesign issue
 
